# cargo-ensure-prefix

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: main.rs
tests/: integration.rs
tests/prefixes/: long.txt  other.txt  really_long.txt  short.txt  wildcard.txt
tests/projects/single_package_explicit_targets/: Cargo.toml
tests/projects/single_package_explicit_targets/src/dir/: boop.rs
tests/projects/workspace_root/: Cargo.toml
tests/projects/workspace_root/wbin/: Cargo.toml
tests/projects/workspace_root/wbin/src/: main.rs
tests/projects/workspace_root/wlib/: Cargo.toml
tests/projects/workspace_root/wlib/src/: lib.rs
